2009-04-11 Harri Pitkänen <hatapitk@iki.fi>

	* Remove --as-needed from linker flags. It is
	  unnecessary as long as libtool < 2.0 is used
	  and breaks build on OS X.

2009-04-10 Harri Pitkänen <hatapitk@iki.fi>

	* Fixed typo that prevented dictionary loader from
	  working correctly on Windows.
	* Add struct keywords to voikko.h to make the header
	  compatible with plain C compilers.
	* Fix memory leak in grammar checker.

2009-04-07 Harri Pitkänen <hatapitk@iki.fi>

	* Change trie compiler to not use a construct that
	  is not supported in python 2.3.

2009-07-05 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>

	* Build fixes for Fedora 11.

2009-04-05 Harri Pitkänen <hatapitk@iki.fi>

	* Improved handling of soft hyphen in grammar checker.

2009-04-04 Harri Pitkänen <hatapitk@iki.fi>

	* Configure updates for libtool version 2.
	* Improved handling of quotations in grammar checker.

2009-03-28 Harri Pitkänen <hatapitk@iki.fi>

	* Add option VOIKKO_OPT_ACCEPT_BULLETED_LISTS_IN_GC.
	* Disable character case checks if sentence contains a tab
	  character.
	* Disable checks for paragraphs that contain only an URL or
	  some other non-standard text.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>

	* Restore Windows support (partially).

2009-03-08 Harri Pitkänen <hatapitk@iki.fi>

	* Read replacement suggestions from data/autocorrect/fi_FI.xml.

2009-02-25 Harri Pitkänen <hatapitk@iki.fi>

	* Change struct gc_sentence into class Sentence.
	* Change struct gc_paragraph into class Paragraph.

2009-02-21 Harri Pitkänen <hatapitk@iki.fi>

	* Change struct gc_token into class Token.

2009-02-19 Harri Pitkänen <hatapitk@iki.fi>

	* Add suggestions for some detected grammar errors.

2009-02-14 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for environment variable VOIKKO_DICTIONARY.
	* Do not try to check character case for sentences that have
	  been written fully in upper case.

2009-01-31 Harri Pitkänen <hatapitk@iki.fi>

	* Add option -d to all test tools.
