@@ -1,3 +1,8 @@
+2009-04-17 Harri Pitkänen <hatapitk@iki.fi>
+
+	* valgrind: Fix invalid use of delete vs. delete[].
+	* cppcheck: Limit the scope of some variables.
+
 2009-04-11 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Remove --as-needed from linker flags. It is
